<resources>
    <string name="app_name">DamanHacker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="serialNumberColor">SerialNumberCheckColor</string>
    <string name="serialNumberValue">SerialNumberCheckValue</string>
    <string name="MultiCheck">MultiCheck</string>
    <string name="FindDuplicateNumber">FindDuplicateNumber</string>
    <string name="ClasicFragmet">ClasicFragment</string>
    <string name="odd">Odd</string>
    <string name="numeric">FindNumeric</string>
    <string name="slideshowFragment">SlideshowFragment</string>
    <string name="single_pattern">Single Pattern</string>
    <string name="report">Report</string>

    <string name="btn_send_token">Send Token</string>
    <string name="btn_send_tokens">Send Tokens</string>
    <string name="btn_send_topic">Send Topic</string>
    <string name="btn_show_token">Show Token</string>
    <string name="btn_subscribe_news">Subscribe (News)</string>
    <string name="btn_unsubscribe_news">Unsubscribe (News)</string>
    <string name="notification_channel_id">default</string>
    <string name="result">Something will happen here&#8230;</string>
    <string name="subscribed">Subscribed to news topic</string>
    <string name="unsubscribed">Unsubscribed from news topic</string>
</resources>