<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/serialNumberColor" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/serialNumberValue" />
        <item
            android:id="@+id/nav_numberSeries"
            android:title="@string/MultiCheck" />
        <item
            android:id="@+id/nav_duplicate"
            android:title="@string/FindDuplicateNumber" />
        <item
            android:id="@+id/nav_clasic"
            android:title="@string/ClasicFragmet" />
        <item
            android:id="@+id/nav_odd"
            android:title="@string/odd" />
        <item
            android:id="@+id/nav_report"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_single"
            android:title="@string/single_pattern" />
        <item
            android:id="@+id/nav_pattern"
            android:title="Pattern Based" />
        <item
            android:id="@+id/nav_downloading"
            android:title="Data Downloading" />
        <item
            android:id="@+id/nav_numeric_color"
            android:title="Color Numeric" />
        <item
            android:id="@+id/nav_number_find"
            android:title="Number Find" />
    </group>
</menu>