<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.damanhacker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.damanhacker.ui.gallery.GalleryFragment"
        android:label="@string/serialNumberValue"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.damanhacker.ui.slideshow.SlideshowFragment"
        android:label="@string/slideshowFragment"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_numberSeries"
        android:name="com.example.damanhacker.ui.numeric.NumericFragment"
        android:label="@string/numeric"
        tools:layout="@layout/numeric_fragment" />
    <fragment
        android:id="@+id/nav_duplicate"
        android:name="com.example.damanhacker.ui.findDuplicateNumber.DuplicateNumberFragment"
        android:label="@string/FindDuplicateNumber"
        tools:layout="@layout/fragment_find_duplicate" />
    <fragment
        android:id="@+id/nav_clasic"
        android:name="com.example.damanhacker.ui.clasic.ClasicFragment"
        android:label="@string/ClasicFragmet"
        tools:layout="@layout/clasic_fragment" />
    <fragment
        android:id="@+id/nav_odd"
        android:name="com.example.damanhacker.ui.numeric.OddFragment"
        android:label="@string/odd"
        tools:layout="@layout/odd_fragment" />
    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.damanhacker.ui.numeric.ReportFragment"
        android:label="ReportFragment"
        tools:layout="@layout/report_fragment" />
    <fragment
        android:id="@+id/nav_single"
        android:name="com.example.damanhacker.ui.numeric.SinglePatternFragment"
        android:label="SinglePattern"
        tools:layout="@layout/single_fragment" />
    <fragment
        android:id="@+id/nav_pattern"
        android:name="com.example.damanhacker.ui.numeric.PatternBasedFragment"
        android:label="PatternBased"
        tools:layout="@layout/pattern_fragment" />
    <fragment
        android:id="@+id/nav_downloading"
        android:name="com.example.damanhacker.ui.slideshow.DataDownLoading"
        android:label="Data Downloading"
        tools:layout="@layout/fragment_data_downloding" />
    <fragment
        android:id="@+id/nav_numeric_color"
        android:name="com.example.damanhacker.ui.numeric.NumericFragmentColor"
        android:label="Numeric Color"
        tools:layout="@layout/numeric_fragment_color" />
</navigation>